<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.test.ahgpoug.timetabletest2.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_schedule"
        android:orderInCategory="100"
        android:title="@string/action_schedule"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_now"
        android:title="@string/action_now"
        android:icon="@drawable/ic_schedule_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:icon="@drawable/ic_sync_white_24dp"
        app:showAsAction="always" />
</menu>